--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 copy.src.files=false
-copy.src.target=/var/www/bwrecords
+copy.src.target=
 index.file=
 run.as=LOCAL
 url=http://localhost/bwrecords/
