--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-modules-php-symfony.ignore-cache-directory=false
 include.path=${php.global.include.path}
 php.version=PHP_5
 source.encoding=UTF-8
