--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -1,3 +1,12 @@
+family:
+  class: sfDoctrineRouteCollection
+  options:
+    model:                family
+    module:               family
+    prefix_path:          /family
+    column:               id
+    with_wildcard_routes: true
+
 # You can find more information about this file on the symfony website:
 # http://www.symfony-project.org/reference/1_4/en/10-Routing
 
