module comment & fixtures

--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -1,3 +1,12 @@
+comment:
+  class: sfDoctrineRouteCollection
+  options:
+    model:                comment
+    module:               comment
+    prefix_path:          /comment
+    column:               id
+    with_wildcard_routes: true
+
 family:
   class: sfDoctrineRouteCollection
   options:
