--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -1,3 +1,12 @@
+product:
+class: sfDoctrineRouteCollection
+options:
+model: product
+module: release
+prefix_path: /release
+column: id
+with_wildcard_routes: true
+
 comment:
   class: sfDoctrineRouteCollection
   options:
