widget upload image News & Family, object_actions Approve, menu back-end, clean xForm.class.php

--- a/apps/backend/modules/comment/config/generator.yml
+++ b/apps/backend/modules/comment/config/generator.yml
@@ -14,7 +14,15 @@ generator:
     config:
       actions: ~
       fields:  ~
-      list:    ~
+      list:    
+        object_actions:
+          setApprove:
+            label: Approve
+            condition:
+              function: getApprove
+              invert: false
+          _edit: ~
+          _delete: ~
       filter:  ~
       form:    ~
       edit:    ~
