--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -6,13 +6,13 @@ default:
     content-type: text/html
 
   metas:
-    #title:        symfony project
+    title:        BRAIN WASHER RECORDS
     #description:  symfony project
     #keywords:     symfony, project
     #language:     en
     #robots:       index, follow
 
-  stylesheets:    [main.css]
+  stylesheets:    [main.css, CSS1.css]
 
   javascripts:    []
 
