--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -49,19 +49,35 @@ shop:
   url:  /shop
   param: { module: shop, action: index }
   
-news_show:
-  url: /news/:slug.html
-  param: { module: news, action: show}
-  class:   sfDoctrineRoute
-  options: { model: Article, type: object }
-  requirements:
-    sf_method: [get, post]
-  
 shop_show:
   url: /shop/:slug.html
   param: { module: shop, action: show}
   class:   sfDoctrineRoute
   options: { model: Product, type: object }
+  requirements:
+    sf_method: [get, post]
+  
+shop_release:
+  url: /shop/:slug.html
+  param: { module: shop, action: release}
+  class:   sfDoctrineRoute
+  options: { model: Product, type: object }
+  requirements:
+    sf_method: [get, post]
+  
+shop_merch:
+  url: /merch/:slug.html
+  param: { module: shop, action: merch}
+  class:   sfDoctrineRoute
+  options: { model: Product, type: object }
+  requirements:
+    sf_method: [get, post]
+
+news_show:
+  url: /news/:slug.html
+  param: { module: news, action: show}
+  class:   sfDoctrineRoute
+  options: { model: Article, type: object }
   requirements:
     sf_method: [get, post]
 
