--- a/apps/frontend/config/factories.yml
+++ b/apps/frontend/config/factories.yml
@@ -19,15 +19,6 @@ test:
     param:
       send_http_headers: false
 
-  mailer:
-    param:
-      delivery_strategy: none
-
-dev:
-  mailer:
-    param:
-      delivery_strategy: none
-
 all:
   routing:
     class: sfPatternRouting
@@ -40,3 +31,18 @@ all:
     param:
       cache_key_use_vary_headers: true
       cache_key_use_host_name:    true
+      
+  mailer:
+   class: sfMailer
+   param:
+    logging:           %SF_LOGGING_ENABLED%
+    charset:           %SF_CHARSET%
+    delivery_strategy: realtime
+    transport:
+      class: Swift_SmtpTransport
+      param:
+        host:       smtp.brainwasherrecords.com
+        port:       587
+        encryption: ~
+        username:   auto-reply@brainwasherrecords.com
+        password:   qualdorei
