--- a/data/fixtures/sfGuard.yml
+++ b/data/fixtures/sfGuard.yml
@@ -2,7 +2,7 @@ sfGuardUser:
   User_admin:
     first_name:     John
     last_name:      Doe
-    email_address:  john.doe@gmail.com
+    email_address:  admin@example.com
     username:       admin
     password:       admin
     is_super_admin: true
